Sprint 8: add duration, startTime, prioritization, overlap check, epic time calculation