@@ -8,6 +8,8 @@ import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.io.IOException;
+import java.time.Duration;
+import java.time.LocalDateTime;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -16,7 +18,7 @@ import static org.junit.jupiter.api.Assertions.*;
  * Проверяет сохранение и загрузку состояния менеджера в/из файла.
  *
  * @author Kirill-Kazantcev
- * @version 1.0
+ * @version 2.0
  * @since Sprint 6
  */
 class FileBackedTaskManagerTest {
@@ -72,14 +74,14 @@ class FileBackedTaskManagerTest {
         assertEquals(1, loaded.getEpics().size());
         assertEquals(1, loaded.getSubtasks().size());
 
-        Task loadedTask = loaded.getTasks().get(0);
+        Task loadedTask = loaded.getTasks().getFirst();
         assertEquals("Task1", loadedTask.getTitle());
         assertEquals(TaskStatus.NEW, loadedTask.getStatus());
 
-        Epic loadedEpic = loaded.getEpics().get(0);
+        Epic loadedEpic = loaded.getEpics().getFirst();
         assertEquals("Epic1", loadedEpic.getTitle());
 
-        Subtask loadedSubtask = loaded.getSubtasks().get(0);
+        Subtask loadedSubtask = loaded.getSubtasks().getFirst();
         assertEquals("Subtask1", loadedSubtask.getTitle());
         assertEquals(loadedEpic.getId(), loadedSubtask.getEpicId());
     }
@@ -108,7 +110,7 @@ class FileBackedTaskManagerTest {
 
         FileBackedTaskManager loaded = FileBackedTaskManager.loadFromFile(tempFile);
 
-        Epic loadedEpic = loaded.getEpics().get(0);
+        Epic loadedEpic = loaded.getEpics().getFirst();
         assertEquals(2, loaded.getEpicSubtasks(loadedEpic.getId()).size());
         assertEquals(TaskStatus.IN_PROGRESS, loadedEpic.getStatus());
     }
@@ -120,10 +122,7 @@ class FileBackedTaskManagerTest {
     @Test
     void shouldThrowExceptionWhenReadingInvalidFile() {
         File invalidFile = new File("non_existent_file.csv");
-
-        assertThrows(ManagerSaveException.class, () -> {
-            FileBackedTaskManager.loadFromFile(invalidFile);
-        });
+        assertThrows(ManagerSaveException.class, () -> FileBackedTaskManager.loadFromFile(invalidFile));
     }
 
     /**
@@ -150,5 +149,88 @@ class FileBackedTaskManagerTest {
 
         FileBackedTaskManager reloaded = FileBackedTaskManager.loadFromFile(tempFile);
         assertEquals(2, reloaded.getTasks().size());
+    }
+
+    // ========== НОВЫЕ ТЕСТЫ ДЛЯ ПОЛЕЙ DURATION И STARTTIME ==========
+
+    /**
+     * Проверяет сохранение и загрузку задачи с продолжительностью и временем старта.
+     *
+     * @throws IOException если возникает ошибка при создании временного файла
+     */
+    @Test
+    void shouldSaveAndLoadTaskWithDurationAndStartTime() throws IOException {
+        File tempFile = File.createTempFile("test", ".csv");
+        tempFile.deleteOnExit();
+
+        FileBackedTaskManager manager = new FileBackedTaskManager(tempFile);
+        LocalDateTime startTime = LocalDateTime.of(2025, 1, 1, 10, 0);
+        Task task = new Task("Task with time", "Desc", TaskStatus.NEW,
+                Duration.ofMinutes(90), startTime);
+        manager.createTask(task);
+
+        FileBackedTaskManager loaded = FileBackedTaskManager.loadFromFile(tempFile);
+        Task loadedTask = loaded.getTasks().getFirst();
+
+        assertEquals(task.getDuration(), loadedTask.getDuration());
+        assertEquals(task.getStartTime(), loadedTask.getStartTime());
+        assertEquals(task.getEndTime(), loadedTask.getEndTime());
+    }
+
+    /**
+     * Проверяет сохранение и загрузку подзадачи с продолжительностью и временем старта.
+     *
+     * @throws IOException если возникает ошибка при создании временного файла
+     */
+    @Test
+    void shouldSaveAndLoadSubtaskWithDurationAndStartTime() throws IOException {
+        File tempFile = File.createTempFile("test", ".csv");
+        tempFile.deleteOnExit();
+
+        FileBackedTaskManager manager = new FileBackedTaskManager(tempFile);
+        Epic epic = new Epic("Epic", "Desc");
+        manager.createEpic(epic);
+        LocalDateTime startTime = LocalDateTime.of(2025, 1, 1, 11, 0);
+        Subtask subtask = new Subtask("Subtask", "Desc", TaskStatus.NEW, epic.getId(),
+                Duration.ofMinutes(45), startTime);
+        manager.createSubtask(subtask);
+
+        FileBackedTaskManager loaded = FileBackedTaskManager.loadFromFile(tempFile);
+        Subtask loadedSubtask = loaded.getSubtasks().getFirst();
+
+        assertEquals(subtask.getDuration(), loadedSubtask.getDuration());
+        assertEquals(subtask.getStartTime(), loadedSubtask.getStartTime());
+        assertEquals(subtask.getEndTime(), loadedSubtask.getEndTime());
+        assertEquals(epic.getId(), loadedSubtask.getEpicId());
+    }
+
+    /**
+     * Проверяет, что при загрузке эпика его время пересчитывается правильно на основе подзадач.
+     *
+     * @throws IOException если возникает ошибка при создании временного файла
+     */
+    @Test
+    void shouldRecalculateEpicTimesAfterLoad() throws IOException {
+        File tempFile = File.createTempFile("test", ".csv");
+        tempFile.deleteOnExit();
+
+        FileBackedTaskManager manager = new FileBackedTaskManager(tempFile);
+        Epic epic = new Epic("Epic", "Desc");
+        manager.createEpic(epic);
+        LocalDateTime start1 = LocalDateTime.of(2025, 1, 1, 9, 0);
+        LocalDateTime start2 = LocalDateTime.of(2025, 1, 1, 10, 0);
+        Subtask sub1 = new Subtask("Sub1", "", TaskStatus.NEW, epic.getId(),
+                Duration.ofMinutes(30), start1);
+        Subtask sub2 = new Subtask("Sub2", "", TaskStatus.NEW, epic.getId(),
+                Duration.ofMinutes(60), start2);
+        manager.createSubtask(sub1);
+        manager.createSubtask(sub2);
+
+        FileBackedTaskManager loaded = FileBackedTaskManager.loadFromFile(tempFile);
+        Epic loadedEpic = loaded.getEpics().getFirst();
+
+        assertEquals(Duration.ofMinutes(90), loadedEpic.getDuration());
+        assertEquals(start1, loadedEpic.getStartTime());
+        assertEquals(start2.plus(Duration.ofMinutes(60)), loadedEpic.getEndTime());
     }
 }
